Bug #9974
loader: comconsole.c unused variable 'intbuf'
Start date:
2018-11-11
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build error when warnings are enabled:
comconsole.c: In function 'comc_pcidev_handle': comconsole.c:528:7: error: unused variable 'intbuf' [-Werror=unused-variable] char intbuf[64]; ^~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 12d65476afc93e61685ea633c371bdbada4e2300
commit 12d65476afc93e61685ea633c371bdbada4e2300 Author: Toomas Soome <tsoome@me.com> Date: 2018-11-13T01:54:52.000Z 9974 loader: comconsole.c unused variable 'intbuf' Reviewed by: Sebastian Wiedenroth <wiedi@frubar.net> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>