9974 loader: comconsole.c unused variable 'intbuf' Reviewed by: Sebastian Wiedenroth <wiedi@frubar.net> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>